<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/add_missing_app"
        android:contentDescription="@string/if_any_app_missing_add_it_here"
        android:id="@+id/mssingapp"
        />
    <item android:title="@string/promote"
        android:contentDescription="@string/if_any_app_missing_add_it_here"
        android:id="@+id/register"
        />
    <item android:title="@string/feedback"
        android:contentDescription="@string/feedback"
        android:id="@+id/feedback"
        />
    <item android:title="@string/share_app"
        android:contentDescription="@string/share_this_app_with_friends"
        android:id="@+id/share_app"
        />


</menu>