<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/background"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add_missing_app">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/any_dragon_app_not_detected"
        android:textColor="@color/white"
        android:padding="20dp"
        />
    <EditText
        android:layout_width="300dp"
        android:textColor="@color/white"
        android:padding="20dp"
        android:inputType="text"
        android:importantForAutofill="no"
        android:layout_height="wrap_content"
        android:id="@+id/missing_app_name"
        android:hint="@string/missing_app_name"
        android:textColorHint="@color/colorAccent"
        />
    <Button
        android:id="@+id/submit_btn"
        android:padding="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:onClick="submit"
        />

</LinearLayout>